IDE refactor: code cleanup